infra/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 8080
  type: ClusterIP
